adl-frontend/src/test/resources/unit/unsupported/error/semantic/attributes/attr1.adl
//#SemanticError GroupId=ATTR ErrorId=CAST_NEGATIVE_TO_UNSIGNED line=4
primitive attributes.attr1 {
  attribute uint8_t attr = 
  -26 ;
  source my.c;	
}
